--- a/src/app/pages/sub-departments/sub-departments.html
+++ b/src/app/pages/sub-departments/sub-departments.html
@@ -54,7 +54,7 @@
         <select
           [(ngModel)]="filters.departmentId"
           (change)="applyFilters()"
-          [disabled]="isDataLoading"
+          [disabled]="isDataLoading || isManager"
           class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro bg-white"
         >
           <option value="">All Departments</option>
@@ -73,7 +73,7 @@
           class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro bg-white"
         >
           <option value="">All Managers</option>
-          <option *ngFor="let manager of managers" [value]="manager._id">
+          <option *ngFor="let manager of getFilteredManagers()" [value]="manager._id">
             {{ manager.fullName }}
           </option>
         </select>
@@ -241,7 +241,7 @@
             [(ngModel)]="formData.departmentId"
             id="parentDept"
             name="parentDept"
-            [disabled]="isLoading"
+            [disabled]="isLoading || isManager"
             [ngClass]="{ 'border-red-500': submitted && !formData.departmentId }"
             class="text-gray-700 peer border border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro p-3 w-full rounded-md outline-none transition bg-white appearance-none disabled:bg-gray-100"
           >
@@ -269,7 +269,7 @@
             class="text-gray-700 peer border border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro p-3 w-full rounded-md outline-none transition bg-white appearance-none disabled:bg-gray-100"
           >
             <option value="" disabled selected hidden>Select Manager</option>
-            <option *ngFor="let m of managers" [value]="m._id">{{ m.fullName }}</option>
+            <option *ngFor="let m of getFilteredManagers()" [value]="m._id">{{ m.fullName }}</option>
           </select>
           <label for="manager" class="absolute left-3 top-3 text-gray-500 text-sm bg-white px-1 transition-all duration-300
                     peer-focus:-top-2 peer-focus:text-xs peer-focus:text-pro peer-not-placeholder-shown:-top-2 peer-not-placeholder-shown:text-xs peer-not-placeholder-shown:text-pro cursor-text">
