--- a/src/app/pages/shifts/shifts.html
+++ b/src/app/pages/shifts/shifts.html
@@ -72,34 +72,33 @@
 
       <!-- Department Filter -->
       <div class="relative">
-        <select
-          [(ngModel)]="filters.departmentId"
-          (change)="applyFilters()"
-          [disabled]="isDataLoading"
-          class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro"
-        >
-          <option value="">All Departments</option>
-          <option *ngFor="let dept of departments" [value]="dept._id">
-            {{ dept.name }}
-          </option>
-        </select>
-      </div>
+  <select
+    [(ngModel)]="filters.departmentId"
+    (change)="applyFilters()"
+    [disabled]="isDataLoading || isManager"
+    class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro"
+  >
+    <option value="">All Departments</option>
+    <option *ngFor="let dept of departments" [value]="dept._id">
+      {{ dept.name }}
+    </option>
+  </select>
+</div>
 
       <!-- Sub-Department Filter -->
       <div class="relative">
-        <select
-          [(ngModel)]="filters.subDepartmentId"
-          (change)="applyFilters()"
-          [disabled]="isDataLoading"
-          class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro"
-        >
-          <option value="">All Sub-Departments</option>
-          <option *ngFor="let sub of subDepartments" [value]="sub._id">
-            {{ sub.name }}
-          </option>
-        </select>
-      </div>
-
+  <select
+    [(ngModel)]="filters.subDepartmentId"
+    (change)="applyFilters()"
+    [disabled]="isDataLoading"
+    class="w-full border text-gray-700 border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-pro focus:border-pro"
+  >
+    <option value="">All Sub-Departments</option>
+    <option *ngFor="let sub of getFilteredSubDepartments()" [value]="sub._id">
+      {{ sub.name }}
+    </option>
+  </select>
+</div>
       <!-- Clear Filters -->
       <button
         (click)="clearFilters()"
@@ -307,7 +306,7 @@
           <select
             id="department"
             [(ngModel)]="newShift.departmentId"
-            [disabled]="isLoading"
+            [disabled]="isLoading || isManager"
             [ngClass]="{
               'border-red-500':
                 (submitted && !newShift.departmentId) || validationErrors.departmentId
@@ -331,15 +330,15 @@
 
         <!-- Sub-Department Select -->
         <div class="relative">
-          <select
-            id="subDepartment"
-            [(ngModel)]="newShift.subDepartmentId"
-            [disabled]="isLoading"
-            class="text-gray-700 peer border border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro p-3 w-full rounded-md outline-none transition placeholder-transparent disabled:bg-gray-100 disabled:cursor-not-allowed"
-          >
-            <option value="">Select Sub-Department (Optional)</option>
-            <option *ngFor="let sub of subDepartments" [value]="sub._id">{{ sub.name }}</option>
-          </select>
+            <select
+              id="subDepartment"
+              [(ngModel)]="newShift.subDepartmentId"
+              [disabled]="isLoading"
+              class="text-gray-700 peer border border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro p-3 w-full rounded-md outline-none transition placeholder-transparent disabled:bg-gray-100 disabled:cursor-not-allowed"
+            >
+              <option value="">Select Sub-Department (Optional)</option>
+              <option *ngFor="let sub of getFilteredSubDepartments()" [value]="sub._id">{{ sub.name }}</option>
+            </select>
           <label
             for="subDepartment"
             class="absolute left-3 top-3 text-gray-500 text-sm bg-white px-1 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-600 peer-placeholder-shown:text-sm peer-focus:-top-2 peer-focus:text-xs peer-focus:text-pro peer-focus:font-medium peer-not-placeholder-shown:-top-2 peer-not-placeholder-shown:text-xs peer-not-placeholder-shown:text-pro peer-not-placeholder-shown:font-medium cursor-text"
